--- a/index.html
+++ b/index.html
@@ -8,7 +8,142 @@
     <title>js-html-css-revolut</title>
   </head>
   <body>
+    <header class="navigazione flex">
+      <!-- SINISTRA -->
+      <div class="sinistra flex">
+        <ul>
+          <li>
+            <a href="#">
+              <img src="./img/logo-revolut.png" alt="logo-revolut">
+            </a>
+          </li>
+          <li>
+            <a href="#">
+              <h2>PERSONALE</h2>
+            </a>
+          </li>
+          <li>
+            <a href="#">
+              <h2>BUSINESS</h2>
+            </a>
+          </li>
+        </ul>
+      </div>
+
+      <!-- DESTRA -->
+      <nav class="destra flex">
+        <ul>
+          <li>
+            <a href="#">
+              <h3>Tariffazione</h3>
+            </a>
+          </li>
+          <li>
+            <a href="#">
+              <h3>Conti</h3>
+            </a>
+          </li>
+          <li class="with-dropdown">
+            <a href="#">
+              <h3>Prodotti</h3>
+            </a>
+            <!-- MENU PRODOTTI -->
+            <div class="dropdown-menu">
+              <ul>
+                <li>
+                  <a href="#">
+                    Trasferimenti di denaro
+                  </a>
+                </li>
+                <li>
+                  <a href="#">
+                    Vault
+                  </a>
+                </li>
+                <li>
+                  <a href="#">
+                    Gestione budget
+                  </a>
+                </li>
+                <li class="beta">
+                  <a href="#">
+                    Perk
+                  </a>
+                </li>
+                <li>
+                  <a href="#">
+                    Criptovaluta
+                  </a>
+                </li>
+                <li>
+                  <a href="#">
+                    Assicurazione smartphone
+                  </a>
+                </li>
+                <li>
+                  <a href="#">
+                    Assicurazione medica internazionale
+                  </a>
+                </li>
+              </ul>
+            </div>
+          </li>
+          <li class="with-dropdown">
+            <a href="#">
+              <h3>Azienda</h3>
+            </a>
+            <!-- MENU AZIENDA -->
+            <div class=class="dropdown-menu">
+              <ul>
+                <li>
+                  <a href="#">
+                    Chi Siamo
+                  </a>
+                </li>
+                <li>
+                  <a href="#">
+                    Blog
+                  </a>
+                </li>
+                <li>
+                  <a href="#">
+                    Lavora con noi
+                  </a>
+                </li>
+                <li class="nuovo">
+                  <a href="#">
+                    Affiliates
+                  </a>
+                </li>
+                <li>
+                  <a href="#">
+                    Contatto
+                  </a>
+                </li>
+              </ul>
+            </div>
+          </li>
+          <li>
+            <a href="#">
+              <h3>Aiuto</h3>
+            </a>
+          </li>
+          <li>
+            <a href="#">
+              <h3>IT</h3>
+            </a>
+          </li>
+          <li>
+            <a href="#">
+              <button type="button" name="button">Scarica l'app</button>
+            </a>
+          </li>
+        </ul>
+      </nav>
+    </header>
+
     <!-- JAVASCRIPT -->
+    <script src="https://ajax.googleapis.com/ajax/libs/jquery/3.3.1/jquery.min.js"></script>
     <script src="./js/main.js" charset="utf-8"></script>
   </body>
 </html>
