--- a/index.html
+++ b/index.html
@@ -93,7 +93,7 @@
               <h3>Azienda</h3>
             </a>
             <!-- MENU AZIENDA -->
-            <div class=class="dropdown-menu">
+            <div class="dropdown-menu">
               <ul>
                 <li>
                   <a href="#">
