--- a/index.html
+++ b/index.html
@@ -11,7 +11,7 @@
     <header class="navigazione flex">
       <!-- SINISTRA -->
       <div class="sinistra flex">
-        <ul>
+        <ul class="flex align-center">
           <li>
             <a href="#">
               <img src="./img/logo-revolut.png" alt="logo-revolut">
@@ -32,7 +32,7 @@
 
       <!-- DESTRA -->
       <nav class="destra flex">
-        <ul>
+        <ul class="flex align-center">
           <li>
             <a href="#">
               <h3>Tariffazione</h3>
