--- a/index.html
+++ b/index.html
@@ -131,11 +131,12 @@
           <li>
             <a href="#">
               <h3>IT</h3>
+              <i class="fas fa-chevron-down"></i>
             </a>
           </li>
-          <li>
+          <li class="button">
             <a href="#">
-              <button type="button" name="button">Scarica l'app</button>
+              Scarica l'app
             </a>
           </li>
         </ul>
